  * Removed parts of an old message bus implementation.
  * Replacing the deprecated module 'new' with 'types'.
  * SQLBackend: Filter creation is done through generators.
  * OPSI.Util.objectToBeautifiedText now uses the json module instead of
    a custom implementation.
  * Removed unsupported backends: Cache, Multiplex, LDAP.
  * ThreadPool: removed functions __createWorker & __deleteWorker.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 04 Oct 2016 16:15:11 +0200

python-opsi (4.0.7.26-1) experimental; urgency=medium

  * SQLite backend: Fix syntax error that may occur during an ALTER TABLE
    if more than one column should be altered.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 10 Oct 2016 17:54:42 +0200

python-opsi (4.0.7.25-1) testing; urgency=medium

  * DepotserverBackend: Fix problem with package installation.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 29 Sep 2016 18:16:54 +0200

python-opsi (4.0.7.24-1) stable; urgency=medium

  * ConfigurationData: On UCS we preferably read the domain from UCR.
    If this fails we resort to the Samba config file.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 27 Sep 2016 12:37:43 +0200

python-opsi (4.0.7.23-2) stable; urgency=medium

  * Correct entry in changelog.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 26 Sep 2016 15:29:35 +0200

python-opsi (4.0.7.23-1) stable; urgency=medium

  * OPSI.System.Posix: added missing 'datetime' import.
  * OPSI.System.Posix: fix wrong reference in getBlockDeviceBusType

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 26 Sep 2016 13:18:20 +0200

python-opsi (4.0.7.22-1) testing; urgency=medium

  * DepotserverBackend: function depot_installPackage now has parameter
    'forceProductId' to force a specific product id when installing a
     product. The installation will be made into the corresponding directory
     of the given product id.
  * OPSI.Util.File.Archive.getFileType now follows symlinks.
